--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -172,7 +172,13 @@
 <div class="footer-inner">
   {% with linkData=request.instance|instance_config:"linkData" %}
   <ul class="inline pull-left">
-    <li><a target="_blank" href="{% if 'treekey' in linkData.keys and linkData.treekey %}{{ linkData.treekey }}{% else %}http://www.arborday.org/trees/whatTree/{% endif %}">{% trans "Tree Key" %}</a></li>
+    <li><a target="_blank"
+           {% if 'treekey' in linkData.keys and linkData.treekey %}
+           href="{{ linkData.treekey }}"
+           {% else %}
+           href="http://www.arborday.org/trees/whatTree/"
+           {% endif %}
+           >{% trans "Tree Key" %}</a></li>
     {% for name in request.instance.static_page_names %}
     <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page=name %}">{{ name }}</a></li>
     {% endfor %}
