Templates for adding resources
* map_add_resource.html contains the "Add Resource" steps
* hidden_addresses.html contains our hidden address fields. Templates which include it (e.g. map-add-tree.html) supply the appropriate "object name" so the fields will have the right identifier.
* div_radio_bool.html allows us to have radio-button-style boolean fields, with labels drawn from field.choices (if present)
* Fix a syntax error in inputs.html which prevented dropdowns from including their options

--- a/opentreemap/treemap/templates/treemap/field/inputs.html
+++ b/opentreemap/treemap/templates/treemap/field/inputs.html
@@ -2,7 +2,7 @@
 {% load dateformat %}
 {% if field.choices %}
     <select name="{{ field.identifier }}" {{ extra|default_if_none:"" }}
-            class="{{ class|default_if_none:"" }}" />
+            class="{{ class|default_if_none:"" }}">
         {% for option in field.choices %}
             <option value="{{ option.value }}"
               {% ifequal option.value field.value %}selected="selected"{% endifequal %}>
