--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -33,6 +33,9 @@
     <div id="sidebar-add-tree" style="display:none">
       {% include "treemap/map-add-tree.html" %}
     </div>
+    <div id="sidebar-add-resource" style="display:none">
+      {% include "treemap/partials/map_add_resource.html" %}
+    </div>
   </div>
 </div>
 {% endblock content %}
