--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -204,6 +204,7 @@
             .addBtn {
                 float: right;
                 margin-top: -3px;
+                margin-left: 7px;
 
                 i {
                     position: relative;
