--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -16,24 +16,45 @@
 {% block instance_title %} | {{ request.instance.name }}{% endblock %}
 
 {% block instancetopnav %}
-<li class="explore-trees {% block activeexplore %}active{% endblock %}"><a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "Explore Trees" %}</a></li>
 {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
-<li data-feature="add_plot">
-  <a data-action='addtree'
-     data-always-enable='{{ last_effective_instance_user|plot_is_writable }}'
-     data-disabled-title='{% trans "Adding trees is not available to all users" %}'
-     data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
-     disabled='disabled'>{% trans "Add a Tree" %}</a>
+  {% if request.instance.supports_resources %}
+    <li class="add-menu dropdown" data-feature="add_plot">
+      <a class="dropdown-toggle" data-toggle="dropdown"
+         data-always-enable='{{ last_effective_instance_user|plot_is_writable }}'
+         data-disabled-title='{% trans "Adding trees is not available to all users" %}'
+         disabled='disabled'>
+        <i class="icon-plus-circled"></i>
+      </a>
+      <ul class="dropdown-menu">
+        <li>
+          <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
+             data-always-enable="True" data-action='addtree'>{% trans "Add a Tree" %}</a>
+        </li>
+        <li>
+          <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
+             data-always-enable="True" data-action='addresource'>{% trans "Add a Resource" %}</a>
+        </li>
+      </ul>
+    </li>
+  {% else %}
+    <li data-feature="add_plot">
+      <a data-action='addtree'
+         data-always-enable='{{ last_effective_instance_user|plot_is_writable }}'
+         data-disabled-title='{% trans "Adding trees is not available to all users" %}'
+         data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
+         disabled='disabled'>{% trans "Add a Tree" %}</a>
+    </li>
+  {% endif %}
+{% endif %}
+<li class="explore-map {% block activeexplore %}active{% endblock %}"><a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "Explore Map" %}</a></li>
+{% if request.instance|feature_enabled:'recent_edits_report' %}
+<li class="{% block activerecentedits %}{% endblock %}">
+  <a href="{% url 'edits' instance_url_name=request.instance.url_name %}">{% trans "View Edits" %}</a>
 </li>
 {% endif %}
 {% if settings.MANAGEMENT_VIEW_NAME and last_effective_instance_user.admin %}
 <li class="{% block activemanagement %}{% endblock %}">
-  <a href="{% url settings.MANAGEMENT_VIEW_NAME instance_url_name=request.instance.url_name %}">{% trans "Manage Tree Map" %}</a>
-</li>
-{% endif %}
-{% if request.instance|feature_enabled:'recent_edits_report' %}
-<li class="{% block activerecentedits %}{% endblock %}">
-  <a href="{% url 'edits' instance_url_name=request.instance.url_name %}">{% trans "View Edits" %}</a>
+  <a href="{% url settings.MANAGEMENT_VIEW_NAME instance_url_name=request.instance.url_name %}">{% trans "Manage" %}</a>
 </li>
 {% endif %}
 {% endblock instancetopnav %}
@@ -96,8 +117,16 @@
           {% endif %}
         {% endblock subhead_exports %}
         {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
+          {% if request.instance.supports_resources %}
+          <a class="btn btn-primary addBtn"
+             data-action='addresource'
+             data-feature="add_plot"
+             data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+             data-disabled-title="{% trans "Adding resources is not available to all users" %}"
+             data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
+             disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Resource" %}</a>
+          {% endif %}
         <a class="btn btn-primary addBtn"
-           data-class="add-tree"
            data-action='addtree'
            data-feature="add_plot"
            data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
