Update templates to use the new standardized benefit names
Previously we were using 'tree_benefits' and 'resource_benefits'. Now
all benefits are accessed from the 'benefits' dict via the group name.

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -7,10 +7,10 @@
   <p>The tree's location falls within a climate region that does not support benefit calculations for this species.</p>
   {% endblocktrans %}
 </div>
-{% elif tree_benefits %}
+{% elif benefits.plot %}
 <table class="table table-hover">
   <tbody>
-    {% for benefit in tree_benefits %}
+    {% for benefit in benefits.plot %}
     <tr>
       <td>{{ benefit.label }}</td>
       <td>{{ benefit.value }} {{ benefit.unit}}</td>
