--- a/opentreemap/treemap/templates/treemap/resource_detail.html
+++ b/opentreemap/treemap/templates/treemap/resource_detail.html
@@ -30,7 +30,7 @@
 <!-- Ecosystem Benefits -->
 <div id="ecobenefits">
 <h3>{% trans "Resource Ecosystem Services" %}</h3>
-{% with stormbenefits=benefits.stormwater %}
+{% with stormbenefits=benefits.resource %}
 {% if stormbenefits %}
 <table class="table table-hover">
   <tbody>
