Use different names for "Add Tree" and "Add Feature" radio buttons

--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -38,17 +38,17 @@
                 <h6>Nearby Address</h6>
                 <hr/>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="new" id="addresource-addnew" /><label for="addresource-addnew">
+                    <input type="radio" name="addResourceOptions" value="new" id="addresource-addnew" /><label for="addresource-addnew">
                         {% trans "Add another resource" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="edit" id="addresource-viewdetails" disabled class="disabled"/><label for="addresource-viewdetails">
+                    <input type="radio" name="addResourceOptions" value="edit" id="addresource-viewdetails" disabled class="disabled"/><label for="addresource-viewdetails">
                         {% trans "Continue editing this resource" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="close" id="addresource-done" checked /><label for="addresource-done">
+                    <input type="radio" name="addResourceOptions" value="close" id="addresource-done" checked /><label for="addresource-done">
                         {% trans "I'm done" %}
                     </label>
                 </span>
