--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -34,22 +34,22 @@
                 <h6>Nearby Address</h6>
                 <hr/>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="copy" id="addtree-addsame" /><label for="addtree-addsame">
+                    <input type="radio" name="addTreeOptions" value="copy" id="addtree-addsame" /><label for="addtree-addsame">
                         {% trans "Add another tree with these details" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="new" id="addtree-addnew" /><label for="addtree-addnew">
+                    <input type="radio" name="addTreeOptions" value="new" id="addtree-addnew" /><label for="addtree-addnew">
                         {% trans "Add another tree with new details" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="edit" id="addtree-viewdetails" /><label for="addtree-viewdetails">
+                    <input type="radio" name="addTreeOptions" value="edit" id="addtree-viewdetails" /><label for="addtree-viewdetails">
                         {% trans "Continue editing this tree" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addFeatureOptions" value="close" id="addtree-done" checked /><label for="addtree-done">
+                    <input type="radio" name="addTreeOptions" value="close" id="addtree-done" checked /><label for="addtree-done">
                         {% trans "I'm done" %}
                     </label>
                 </span>
