--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -19,18 +19,25 @@
             </div>
             {% include 'treemap/partials/step_controls.html' with step=1 %}
         </div>
-        {% include "treemap/partials/step_set_resource_location.html" with step=2 feature_name="resource" %}
+        {% include "treemap/partials/step_set_location.html" with step=2 feature_name="resource" %}
         <div class="add-step">
-            <div class="add-step-header">3. {% trans "About this Resource" %}</div>
+            <div class="add-step-header">3. {% trans "Indicate Nearby Roof Area" %}</div>
+            <div class="add-step-content">
+                <div class="alert alert-info">Drag and outline the nearby roof area that would drain into your resource.</div>
+            </div>
+            {% include 'treemap/partials/step_controls.html' with step=3 %}
+        </div>
+        <div class="add-step">
+            <div class="add-step-header">4. {% trans "About this Resource" %}</div>
             <div class="add-step-content">
                 <form id="add-resource-form" onsubmit="return false;">
                   {# Added dynamically when resource type is chosen #}
                 </form>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=3 %}
+            {% include 'treemap/partials/step_controls.html' with step=4 %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">4. {% trans "Finalize this resource" %}</div>
+            <div class="add-step-header">5. {% trans "Finalize this resource" %}</div>
             <div class="add-step-content">
                 <h3 class="summaryHead"></h3>
                 <h6 class="summarySubhead"></h6>
@@ -53,7 +60,7 @@
                     </label>
                 </span>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=4 %}
+            {% include 'treemap/partials/step_controls.html' with step=5 %}
         </div>
     </div>
 </div>
