--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -6,9 +6,9 @@
     <a href="javascript:;" class="close cancelBtn small">×</a>
     <h3>Add a Tree</h3>
     <div class="add-step-container">
-        {% include "treemap/partials/step_set_location.html" with step=1 feature_name="tree" %}
+        {% include "treemap/partials/step_set_location.html" with first=True feature_name="tree" %}
         <div class="add-step">
-            <div class="add-step-header">2. {% trans "Add species and additional info" %}</div>
+            <div class="add-step-header">{% trans "Add species and additional info" %}</div>
             <div class="add-step-content">
                 <form id="add-tree-form" onsubmit="return false;">
                     {# The "add-tree-species" label is used as an id prefix in "species_ul.html" #}
@@ -23,10 +23,10 @@
                     {% include 'treemap/partials/hidden_address.html' with object_name='plot' %}
                 </form>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=2 %}
+            {% include 'treemap/partials/step_controls.html' %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">3. {% trans "Finalize this tree" %}</div>
+            <div class="add-step-header">{% trans "Finalize this tree" %}</div>
             <div class="add-step-content">
                 <h3 class="summaryHead"></h3>
                 <h6 class="summarySubhead"></h6>
@@ -55,7 +55,7 @@
                     </label>
                 </span>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=3 %}
+            {% include 'treemap/partials/step_controls.html' with last=True %}
         </div>
     </div>
 </div>
