--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -7,7 +7,7 @@
     <h3>{% trans "Add a Resource" %}</h3>
     <div class="add-step-container">
         <div class="add-step active">
-            <div class="add-step-header">1. Select Resource Type</div>
+            <div class="add-step-header">{% trans "Select Resource Type" %}</div>
             <div class="add-step-content">
                 <label>{% trans "Resource Type" %}</label>
                 {% for type in resource_types %}
@@ -17,27 +17,27 @@
                     </label>
                 {% endfor %}
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=1 %}
+            {% include 'treemap/partials/step_controls.html' with first=True %}
         </div>
-        {% include "treemap/partials/step_set_location.html" with step=2 feature_name="resource" %}
+        {% include "treemap/partials/step_set_location.html" with feature_name="resource" %}
         <div class="add-step">
-            <div class="add-step-header">3. {% trans "Indicate Nearby Roof Area" %}</div>
+            <div class="add-step-header">{% trans "Indicate Nearby Roof Area" %}</div>
             <div class="add-step-content">
                 <div class="alert alert-info">Drag and outline the nearby roof area that would drain into your resource.</div>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=3 %}
+            {% include 'treemap/partials/step_controls.html' %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">4. {% trans "About this Resource" %}</div>
+            <div class="add-step-header">{% trans "About this Resource" %}</div>
             <div class="add-step-content">
                 <form id="add-resource-form" onsubmit="return false;">
                   {# Added dynamically when resource type is chosen #}
                 </form>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=4 %}
+            {% include 'treemap/partials/step_controls.html' %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">5. {% trans "Finalize this resource" %}</div>
+            <div class="add-step-header">{% trans "Finalize this resource" %}</div>
             <div class="add-step-content">
                 <h3 class="summaryHead"></h3>
                 <h6 class="summarySubhead"></h6>
@@ -60,7 +60,7 @@
                     </label>
                 </span>
             </div>
-            {% include 'treemap/partials/step_controls.html' with step=5 %}
+            {% include 'treemap/partials/step_controls.html' with last=True %}
         </div>
     </div>
 </div>
