Show/hide "roof geometry" step depending on type of resource
* Resource classes may declare which field name is their "area_field_name"
* If chosen resource type has no area_field_name, hide the "roof geometry" step
* Hide the step by adding "inactive" class
* stepControls.js skips over inactive steps

--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -45,6 +45,9 @@
             &.prev {
                 left: -100%;
             }
+            &.inactive {
+                display: none;
+            }
 
             .add-step-header:before {
                 content: counter(steps) ". ";
