Adjust styling on navbar plus sign when active/open

--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -44,9 +44,11 @@
                 }
             }
             &.dropdown {
+                &.active,
                 &.open {
-                    a {
+                    > a {
                         background-color: transparent !important;
+                        border-bottom: none;
                     }
                 }
 
